--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,6 +14,7 @@
 
     </ImageView>
 
+
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,6 +78,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="0.2" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="100sp"
+            android:textSize="16sp"
+            android:textColor="@color/md_red_900"
+            android:text="Delete my account"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/DeactivateMyAccount"
+
+            android:src="@drawable/ic_baseline_delete_forever_24">
+
+        </ImageView>
 
 
 
