--- a/app/src/main/res/layout/activity_instructor_home.xml
+++ b/app/src/main/res/layout/activity_instructor_home.xml
@@ -6,10 +6,10 @@
     android:orientation="vertical"
     android:id="@+id/instructorHome"
     tools:context=".ui.instructor.InstructorHome"
-    android:background="@drawable/drawable_gradient_animation_list"
+
 
     android:layout_height="match_parent">
-
+<!--  android:background="@drawable/drawable_gradient_animation_list" -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
