--- a/app/src/main/res/layout/activity_create_exam.xml
+++ b/app/src/main/res/layout/activity_create_exam.xml
@@ -1,9 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.instructor.CreateExam">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/EuserID"
+        android:hint="User ID"
+        android:layout_height="45dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/EexamID"
+        android:hint="Exam ID"
+        android:layout_height="45dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/EexamName"
+        android:hint="Exam Name"
+        android:layout_height="45dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/EexamDate"
+        android:hint="Exam Date"
+        android:layout_height="45dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/EexamGrade"
+        android:hint="Exam Grade"
+        android:layout_height="45dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:id="@+id/btnCreateExam"
+        android:text="Create exam"
+        android:layout_height="45dp"/>
+
+</LinearLayout>
