--- a/app/src/main/res/layout/fragment_fragment1_home.xml
+++ b/app/src/main/res/layout/fragment_fragment1_home.xml
@@ -140,7 +140,38 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1">
 
+                    <RelativeLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/textView7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/btn_AddAnswers"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="10dp"
+                            android:text="Add Answers"
+                            android:textSize="24sp"
+                            app:fontFamily="@font/aclonica" />
+
+                        <ImageView
+
+                            android:id="@+id/btn_AddAnswers"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="15dp"
+                            app:srcCompat="@drawable/qa" />
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -158,7 +189,7 @@
                             android:layout_below="@id/btnRequestAnalytics"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
-                            android:text="Request Analytics"
+                            android:text="Get Analytics"
                             android:textSize="24sp"
                             app:fontFamily="@font/aclonica" />
 
@@ -184,7 +215,38 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1">
 
+                    <RelativeLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/btnRemoveExam"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="10dp"
+                            android:text="Delete Exam"
+                            android:textSize="24sp"
+                            app:fontFamily="@font/aclonica" />
+
+                        <ImageView
+
+                            android:id="@+id/btnRemoveExam"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="15dp"
+                            app:srcCompat="@drawable/removee" />
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -202,7 +264,7 @@
                             android:layout_below="@id/btnExport"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
-                            android:text="Export Grades"
+                            android:text="Get Grades"
                             android:textSize="24sp"
                             app:fontFamily="@font/aclonica" />
 
@@ -215,6 +277,7 @@
                             app:srcCompat="@drawable/ic_baseline_import_export_24" />
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
+
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
