--- a/app/src/main/res/layout/fragment_fragment1_home.xml
+++ b/app/src/main/res/layout/fragment_fragment1_home.xml
@@ -354,6 +354,10 @@
                 </androidx.cardview.widget.CardView>
 
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                   />
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
