--- a/app/src/main/res/layout/fragment_fragment1_home.xml
+++ b/app/src/main/res/layout/fragment_fragment1_home.xml
@@ -14,6 +14,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="60sp"
             android:background="#FFFFFF">
 
             <TextView
@@ -341,7 +342,8 @@
                             android:layout_marginTop="10dp"
                             android:text="Get Grades"
                             android:textSize="24sp"
-                            app:fontFamily="@font/aclonica" />
+                            app:fontFamily="@font/aclonica"
+                           />
 
                         <ImageView
                             android:id="@+id/btnExport"
@@ -350,16 +352,16 @@
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="15dp"
                             app:srcCompat="@drawable/ic_baseline_import_export_24" />
+
                     </RelativeLayout>
+
                 </androidx.cardview.widget.CardView>
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                   />
+
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 
 </FrameLayout>
