--- a/app/src/main/res/layout/activity_custom_camara.xml
+++ b/app/src/main/res/layout/activity_custom_camara.xml
@@ -33,7 +33,16 @@
             android:layout_marginLeft="5dp"
          >
 
+
         </Spinner>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gallary"
+            android:id="@+id/loadImageFromGallary"
+            >
+
+        </Button>
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
