--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -37,5 +37,8 @@
         <attr name="cnb_textColor" format="color" />
         <attr name="cnb_backgroundColor" format="color" />
     </declare-styleable>
-
+    <declare-styleable name="CircleButton">
+        <attr name="cb_color" format="color" />
+        <attr name="cb_pressedRingWidth" format="dimension" />
+    </declare-styleable>
 </resources>
