--- a/app/src/main/res/layout/activity_delete_exam.xml
+++ b/app/src/main/res/layout/activity_delete_exam.xml
@@ -20,9 +20,8 @@
         android:layout_marginTop="25sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/Spinner_selectExamtodelete" />
 
-        android:id="@+id/Spinner_selectExamtodelete"
-        />
     <com.royrodriguez.transitionbutton.TransitionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
