--- a/app/src/main/res/layout/activity_create_exam.xml
+++ b/app/src/main/res/layout/activity_create_exam.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="5dp"
     tools:context=".ui.instructor.CreateExam">
 
     <EditText
@@ -37,5 +38,7 @@
         android:id="@+id/btnCreateExam"
         android:text="Create exam"
         android:layout_height="45dp"/>
+
+
 
 </LinearLayout>
