--- a/app/src/main/res/layout/predict_performance_knn.xml
+++ b/app/src/main/res/layout/predict_performance_knn.xml
@@ -1,9 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5sp"
+    android:orientation="vertical"
     tools:context=".ui.instructor.PredictPerformanceKnnActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5sp"
+        android:text="Select Course "
+        android:textSize="22sp"
+        android:paddingTop="7sp"
+        app:fontFamily="@font/aclonica" />
+
+    <Spinner
+        android:layout_marginTop="10sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner_selectCoursetoPredict" />
+
+    <com.royrodriguez.transitionbutton.TransitionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Display student expectations"
+        android:layout_marginTop="5sp"
+        android:paddingRight="20sp"
+        android:paddingLeft="20sp"
+        android:layout_gravity="center"
+        android:id="@+id/btnStudentExpectation" />
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:id="@+id/pieChart"
+        android:layout_height="300sp"/>
+
+
+
+       <TextView
+           android:layout_width="match_parent"
+           android:text="Accuracy: "
+           android:gravity="center"
+           android:textSize="30sp"
+           android:id="@+id/txtAccuracy"
+           android:layout_height="40sp"/>
+
+
+
+</LinearLayout>
