--- a/app/src/main/res/layout/predict_performance_knn.xml
+++ b/app/src/main/res/layout/predict_performance_knn.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,48 +8,80 @@
     android:orientation="vertical"
     tools:context=".ui.instructor.PredictPerformanceKnnActivity">
 
-    <TextView
-        android:id="@+id/textView33"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5sp"
-        android:text="Select Course "
-        android:textSize="22sp"
-        android:paddingTop="7sp"
-        app:fontFamily="@font/aclonica" />
-
-    <Spinner
-        android:layout_marginTop="10sp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner_selectCoursetoPredict" />
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="5sp"
+            android:layout_height="wrap_content">
 
-    <com.royrodriguez.transitionbutton.TransitionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Display student expectations"
-        android:layout_marginTop="5sp"
-        android:paddingRight="20sp"
-        android:paddingLeft="20sp"
-        android:layout_gravity="center"
-        android:id="@+id/btnStudentExpectation" />
+            <TextView
+                android:id="@+id/textView33"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:id="@+id/pieChart"
-        android:layout_height="300sp"/>
+                android:text="Select Course "
+                android:textSize="19sp"
+                android:paddingTop="7sp"
+                android:layout_marginRight="5sp"
+                app:fontFamily="@font/aclonica" />
 
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spinner_selectCoursetoPredict" />
 
-
-       <TextView
-           android:layout_width="match_parent"
-           android:text="Accuracy: "
-           android:gravity="center"
-           android:textSize="30sp"
-           android:id="@+id/txtAccuracy"
-           android:layout_height="40sp"/>
+        </LinearLayout>
 
 
 
-</LinearLayout>
+
+        <com.royrodriguez.transitionbutton.TransitionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Display student expectations"
+            android:layout_marginTop="5sp"
+            android:paddingRight="20sp"
+            android:paddingLeft="20sp"
+            android:layout_gravity="center"
+            android:id="@+id/btnStudentExpectation" />
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:id="@+id/pieChart"
+            android:layout_marginBottom="7sp"
+            android:layout_height="310sp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:text="Accuracy: "
+            android:paddingLeft="7sp"
+            android:textSize="20sp"
+            android:id="@+id/txtAccuracy"
+            android:layout_marginBottom="7sp"
+            android:layout_height="40sp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:paddingLeft="7sp"
+            android:textSize="20sp"
+            android:id="@+id/txtStdAtRisk"
+            android:text="student at risk: none"
+            android:layout_height="40sp"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:id="@+id/listStdAtRisk"
+            android:visibility="invisible"
+            android:layout_height="200sp"/>
+
+    </LinearLayout>
+
+
+
+
+</ScrollView>
