--- a/app/src/main/res/layout/activity_add_answer_manually.xml
+++ b/app/src/main/res/layout/activity_add_answer_manually.xml
@@ -14,7 +14,22 @@
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
+      <Spinner
+          android:layout_width="match_parent"
+          android:id="@+id/spnExamsNames"
+          android:layout_marginBottom="10sp"
+          android:layout_height="wrap_content"/>
 
+      <ListView
+          android:layout_width="match_parent"
+          android:id="@+id/lstViewExamAns"
+          android:layout_height="365sp"/>
+
+      <Button
+          android:layout_width="match_parent"
+          android:id="@+id/btnSaveExamAnswer"
+          android:text="Save"
+          android:layout_height="wrap_content"/>
 
 
    </LinearLayout>
