--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -14,16 +14,22 @@
         android:layout_height="match_parent">
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:text="Q"
-            android:textColor="@color/black"
-            android:textSize="25sp"
-            android:layout_marginTop="7sp"
-            android:fontFamily="@font/aclonica"
-            android:layout_marginRight="12sp"
-            android:id="@+id/txtQuesNum"
-            android:layout_height="wrap_content"/>
+       <LinearLayout
+           android:layout_width="80sp"
+           android:orientation="horizontal"
+           android:layout_height="wrap_content">
+
+           <TextView
+               android:layout_width="wrap_content"
+               android:text="Q"
+               android:textColor="@color/black"
+               android:textSize="22sp"
+               android:layout_marginTop="7sp"
+               android:fontFamily="@font/aclonica"
+               android:layout_marginRight="12sp"
+               android:id="@+id/txtQuesNum"
+               android:layout_height="wrap_content"/>
+       </LinearLayout>
 
         <RadioGroup
             android:layout_width="match_parent"
@@ -38,7 +44,6 @@
                 android:textSize="22sp"
                 android:textColor="@color/black"
                 android:buttonTint="@color/design_default_color_secondary_variant"
-                android:focusableInTouchMode="false"
                 android:layout_height="wrap_content"
                 android:text="A"
                 />
@@ -49,7 +54,6 @@
                 android:textColor="@color/black"
                 android:layout_marginRight="12sp"
                 android:buttonTint="@color/design_default_color_secondary_variant"
-
                 android:textSize="22sp"
                 android:text="B"
                 />
